--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,25 @@
-<nav></nav>
+<!DOCTYPE html>
+<header>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/pokemon">Pokemon</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/moves">Moves</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/types">Types</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/casus">Casus</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
