Aan casus gewerkt

--- a/src/app/casus/casus.component.html
+++ b/src/app/casus/casus.component.html
@@ -1,1 +1,55 @@
-<p>casus works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <p>Pokemon</p>
+        <ul>
+            <li>Name</li>
+            <li>Pokedex Number</li>
+            <li>Pokedex Entry</li>
+            <li>Types</li>
+            <li>Abilities</li>
+            <li>Possible Moves</li>
+            <li>HP</li>
+            <li>Defense</li>
+            <li>Special Defence</li>
+            <li>Attack</li>
+            <li>Special Attack</li>
+            <li>Speed</li>
+            <li>Evolves From</li>
+            <li>Evolves Into</li>
+            <li>Evolution Requirement</li>
+        </ul>
+      </div>
+      <div class="col-sm">
+        Move
+        <ul>
+            <li>Name</li>
+            <li>Description</li>
+            <li>Type</li>
+            <li>Move Category (Physical, Special or Status)</li>
+            <li>Makes Contact</li>
+            <li>PP</li>
+            <li>Power</li>
+            <li>Accuracy</li>
+        </ul>
+      </div>
+      <div class="col-sm">
+        Type
+        <ul>
+            <li>Name</li>
+            <li>Strong against</li>
+            <li>Weak against</li>
+            <li>useless against</li>
+            <li>Immune to</li>
+            <li>Resistant to</li>
+            <li>Vulnerable To</li>
+        </ul>
+      </div><div class="col-sm">
+        Ability
+        <ul>
+            <li>Name</li>
+            <li>Description</li>
+        </ul>
+      </div>
+    </div>
+  </div>
