--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <header>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/pokemon">Pokemon</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/moves">Moves</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/types">Types</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/casus">Casus</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="collapse navbar-collapse">
+      <div class="container">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/pokemon">Pokémon</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/moves">Moves</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/types">Types</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/casus">Casus</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
