--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="container d-flex justify-content-center">
+    <h4 class="mt-3">Welkom op mijn website over pokémon</h4>
+</div>
