styled some more

--- a/src/app/casus/casus.component.html
+++ b/src/app/casus/casus.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-4">
     <div class="row">
       <div class="col-sm">
-        <p>Pokemon</p>
+        <p>Pokémon</p>
         <ul>
             <li>Name</li>
-            <li>Pokedex Number</li>
-            <li>Pokedex Entry</li>
+            <li>Pokédex Number</li>
+            <li>Pokédex Entry</li>
             <li>Types</li>
             <li>Abilities</li>
             <li>Possible Moves</li>
