--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
+<style>
+    header {
+        background-color: #3264B0;
+    }
+    a {
+        color: white;
+    }
+    a:hover {
+        color: lightgray;
+    }
+</style>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg customnavbg">
     <div class="collapse navbar-collapse">
       <div class="container">
         <ul class="navbar-nav mr-auto">
